<resources>
    <string name="app_name">LaundryPro</string>
    <string name="new_user_register_here_text">New User? Register here.</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_to_laundrypro">Login to LaundryPro</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="laundry_pro_logo">Laundry Pro Logo</string>
    <string name="laundry_pro">Laundry Pro</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="new_user_register_here">New User? Register here.</string>
</resources>